--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,4 +14,44 @@
         android:layout_weight="1" />
 
     <include layout="@layout/bottom_navigation" />
-</LinearLayout>
+</LinearLayout><!--<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
+    <!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
+    <!--    xmlns:tools="http://schemas.android.com/tools"-->
+    <!--    android:layout_width="match_parent"-->
+    <!--    android:layout_height="match_parent"-->
+    <!--    android:background="@android:color/white"-->
+    <!--    tools:context=".view.MainActivity">-->
+
+    <!--    <FrameLayout-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="match_parent">-->
+
+    <!--    </FrameLayout>-->
+
+    <!--    <com.google.android.material.bottomappbar.BottomAppBar-->
+    <!--        android:id="@+id/bottomAppBar"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_gravity="bottom"-->
+    <!--        app:fabCradleMargin="20dp"-->
+    <!--        app:fabCradleRoundedCornerRadius="20dp"-->
+    <!--        app:fabCradleVerticalOffset="10dp">-->
+
+    <!--        <com.google.android.material.bottomnavigation.BottomNavigationView-->
+    <!--            android:id="@+id/bottomNavigationView"-->
+    <!--            android:layout_width="match_parent"-->
+    <!--            android:layout_height="match_parent"-->
+    <!--            android:layout_marginEnd="16dp"-->
+    <!--            android:background="@android:color/transparent"-->
+    <!--            app:menu="@menu/menu_navigation" />-->
+
+    <!--    </com.google.android.material.bottomappbar.BottomAppBar>-->
+
+    <!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
+    <!--        android:id="@+id/fab"-->
+    <!--        android:layout_width="wrap_content"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:src="@drawable/ic_favorite"-->
+    <!--        app:layout_anchor="@id/bottomAppBar" />-->
+
+    <!--</androidx.coordinatorlayout.widget.CoordinatorLayout>-->
