--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,23 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="#F0F2F5"
     android:orientation="vertical">
-
-    <!--    <EditText-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:layout_margin="10dp"-->
-    <!--        android:background="@drawable/rounded_edittext"-->
-    <!--        android:drawableStart="@drawable/ic_search"-->
-    <!--        android:elevation="5dp"-->
-    <!--        android:fontFamily="@font/poppins_regular"-->
-    <!--        android:hint="Buscar"-->
-    <!--        android:maxLines="1"-->
-    <!--        android:padding="10dp"-->
-    <!--        android:textColor="@color/black"-->
-    <!--        android:textSize="@dimen/txt_text"-->
-    <!--        android:textStyle="normal" />-->
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -56,6 +41,44 @@
         android:id="@+id/recyclerCatalogo"
         android:layout_width="match_parent"
         android:layout_height="150dp"
+        android:background="@android:color/transparent" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="10dp"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:weightSum="10">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="8"
+            android:fontFamily="@font/poppins_bold"
+            android:gravity="center_vertical"
+            android:text="Popular"
+            android:textColor="@android:color/black"
+            android:textSize="@dimen/txt_title" />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="2"
+            android:fontFamily="@font/poppins_regular"
+            android:gravity="center_vertical|end"
+            android:paddingStart="10dp"
+            android:text="Ver Mas>"
+            android:textColor="@android:color/darker_gray"
+            android:textSize="@dimen/txt_text"
+            android:textStyle="bold" />
+    </LinearLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerPopular"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:background="@android:color/transparent" />
 
     <RelativeLayout
